fix: Action menu z-index with new overlay

--- a/src/components/Menu/index.styl
+++ b/src/components/Menu/index.styl
@@ -1,4 +1,5 @@
 @require 'settings/palette.styl'
+@require 'settings/z-index.styl'
 @require 'components/popover.styl'
 
 .coz-menu
@@ -14,6 +15,7 @@
     margin     0
     margin-top .0625rem
     min-width  13.75rem
+    z-index $file-action-menu
 
 .coz-menu-inner--opened
     display block
